--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,20 @@
   object-fit: cover;
   height: 180px;
 }
+
+.filter-btn{
+  margin: 10px;
+  cursor: pointer;
+}
+
+.shimmer-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.shimmer-card{
+  height: 400px;
+  width: 200px;
+  background-color: #f0f0f0;
+  margin: 5px;
+}
