--- a/styles.css
+++ b/styles.css
@@ -51,11 +51,6 @@
   height: 180px;
 }
 
-.filter-btn{
-  margin: 10px;
-  cursor: pointer;
-}
-
 .shimmer-container{
   display: flex;
   flex-wrap: wrap;
@@ -66,4 +61,25 @@
   width: 200px;
   background-color: #f0f0f0;
   margin: 5px;
+}
+
+.login{
+  padding: 0px 15px;
+  cursor: pointer;
+}
+
+.filter {
+  display: flex;
+  padding: 10px;
+  
+}
+
+.filter-btn {
+  display: block !important;
+  background-color: #ff6600;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  cursor: pointer;
+  font-size: 15px;
 }
