--- a/styles.css
+++ b/styles.css
@@ -1,85 +1,1 @@
-.header{
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid black;
-}
-
-.logo{
-  width: 120px;
-}
-
-.nav-items{
-  padding: 0px 15px;
-}
-
-.nav-items > ul{
-  font-size: 15px;
-  display: flex;
-  list-style: none;
-}
-
-.nav-items > ul > li {
-  padding: 15px;
-  margin: 5px;
-}
-
-.res-card{
-  padding: 5px;
-  margin: 5px;
-  width: 190px;
-  border-radius: 10px;
-  
-}
-
-.restro-container{
-  display: flex;
-  flex-wrap: wrap;
-  margin: 5px;
-}
-.res-card:hover{
-  cursor: pointer;
-  border: 1px solid black;
-}
-
-.search{
-  padding: 10px;
-}
-
-.res-logo{
-  width: 100%;
-  object-fit: cover;
-  height: 180px;
-}
-
-.shimmer-container{
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.shimmer-card{
-  height: 400px;
-  width: 200px;
-  background-color: #f0f0f0;
-  margin: 5px;
-}
-
-.login{
-  padding: 0px 15px;
-  cursor: pointer;
-}
-
-.filter {
-  display: flex;
-  padding: 10px;
-  
-}
-
-.filter-btn {
-  display: block !important;
-  background-color: #ff6600;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-  cursor: pointer;
-  font-size: 15px;
-}
+@import "tailwindcss";
